added group color translucency over emoji icons, set height and width to be whatever the browsers heigh and width is

--- a/src/main/java/me/qcarver/pubnubpubber/html/ClusterPubNub.html
+++ b/src/main/java/me/qcarver/pubnubpubber/html/ClusterPubNub.html
@@ -8,6 +8,7 @@
         margin: 1em;
         background: #293950;
         color: #ecf0f0;
+        margin: 0;
     }
     section {
         margin: 0 auto;
